--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,14 +7,14 @@ public_folder: "/img/uploads"
 collections:
   - name: "blogs" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "blogs/" # The path to the folder where the documents are stored
+    folder: "content/blogs/" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "image", widget: "image"}
-      - {label: "Image Description", name: "imageAlt", widget: "string"}
-      - {label: "Image Credit", name: "imageCredit", widget: "string"}
+      - {label: "Featured Image", name: "image", widget: "image", required: false}
+      - {label: "Image Description", name: "imageAlt", widget: "string", required: false, comment: "So blind people konw what it's a picture of"}
+      - {label: "Image Credit", name: "imageCredit", widget: "string", required: false}
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
