turn on open authoring

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: maco/clan-cambion
   branch: main
+  open_authoring: true
 publish_mode: editorial_workflow
 media_folder: "static/img/uploads"
 public_folder: "/img/uploads"
